--- a/2_scripts/00_imputation_donation_donor.ipynb
+++ b/2_scripts/00_imputation_donation_donor.ipynb
@@ -7,7 +7,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "## impute donation type fro deferrals for both US and SA data before preprocessing\n",
+    "## impute donation type for deferrals for both US and SA data before preprocessing\n",
     "\n",
     "\n",
     "import pyreadstat\n",
@@ -27,9 +27,7 @@
    "cell_type": "code",
    "execution_count": null,
    "id": "95e630d8-0436-4f06-8cf8-c498646a1042",
-   "metadata": {
-    "scrolled": true
-   },
+   "metadata": {},
    "outputs": [],
    "source": [
     "#SANBS\n",
@@ -41,14 +39,33 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "a6bdef64-cd12-42f6-af9d-5494ff7ec774",
+   "id": "38892a42-bf45-4717-b2a7-2bda93585cdc",
    "metadata": {},
    "outputs": [],
    "source": [
+    "#categorise donation types\n",
+    "\n",
     "df.loc[(df['donation_product'] == 'WB')|\n",
     "           (df['donation_product'] == 'WBSB')| (df['donation_product'] == 'WBMED')| (df['donation_product'] == 'WBDISC')\n",
     "           |( df['donation_product'] == 'WBOB') |(df['donation_product'] == 'WBDP') | (df['donation_product'] == 'WBD') ,\n",
     "           'donation_product']='WB'\n",
+    "\n",
+    "df.loc[(df['donation_product'] == 'RBCAPH')|\n",
+    "           (df['donation_product'] == 'HPC.APHERESIS')| (df['donation_product'] == 'APHRET_PLASPLCA')| (df['donation_product'] == 'APHRET_PLCA'),'donation_product']='APH'\n",
+    "\n",
+    "df.loc[(df['donation_product'] == 'SPCCPSTOP')|\n",
+    "           (df['donation_product'] == 'CCPD')| (df['donation_product'] == 'SPCCPRETURN')| (df['donation_product'] == 'SPCCP'),\n",
+    "           'donation_product']='CCP'"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "a6bdef64-cd12-42f6-af9d-5494ff7ec774",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "\n",
     "# Compute donation product for deferred donors - using the following criteria\n",
     " # 1) if donor only has WB then deferred donation is WB\n",
     " # 2) if next donation procedure is WB then deferred donation is WB/\n",
@@ -72,9 +89,6 @@
     "df['donation_product']=np.where((df['donation_product'] == 'DEF PROD'), np.NaN, (df['donation_product']))\n",
     "\n",
     "df['donation_product'] = df.groupby('DonorID')['donation_product'].bfill()\n",
-    "\n",
-    "#keep only wb and rbc\n",
-    "df.drop(df[(df['donation_product'] != 'WB')].index, inplace=True)\n",
     "\n",
     "\n",
     "#keep only data after 2017\n",
@@ -121,7 +135,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "#preprocess don\n",
+    "#categorise donation types\n",
     "\n",
     "don.loc[(don['PHLEBOTOMY_GROUP'] == 'Whole Blood'), 'don_proc_cat']='WB'\n",
     "\n",
@@ -130,6 +144,8 @@
     "\n",
     "don.loc[(don['PHLEBOTOMY_GROUP'] == 'Platelet') | (don['PHLEBOTOMY_GROUP'] == 'Platelet/Plasma') |\n",
     "          (don['PHLEBOTOMY_GROUP'] == 'Plasma') | (don['PHLEBOTOMY_GROUP'] == 'COVID-19 Plasma') | (don['PHLEBOTOMY_GROUP'] == 'Source Plasma'), 'don_proc_cat']='Platelet/Plasma'\n",
+    "\n",
+    "don.loc[(don['PHLEBOTOMY_GROUP'] == 'COVID-19 Plasma'), 'don_proc_cat']='CCP'\n",
     "\n",
     "don.loc[(don['PHLEBOTOMY_GROUP'] == 'Sample Only') | (don['PHLEBOTOMY_GROUP'] == 'Research/Sample Only'), 'don_proc_cat']='Sample'\n",
     "\n",
@@ -149,18 +165,11 @@
    "metadata": {},
    "outputs": [],
    "source": [
+    "#store next and orev donation type\n",
     "don.sort_values(by=['DONOR_KEY', 'DON_DATE_KEY', 'DIN'], axis = 0, inplace=True)\n",
     "don[\"NEXT_DON\"] = np.where(don['DONOR_KEY'] == don['DONOR_KEY'].shift(-1), don['don_proc_cat'].shift(-1), 10)\n",
-    "don[\"PREV_DON\"] = np.where(don['DONOR_KEY'] == don['DONOR_KEY'].shift(1), don['don_proc_cat'].shift(1), 10)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "4c0d2ffd-4088-4730-abb0-bca5b52aa872",
-   "metadata": {},
-   "outputs": [],
-   "source": [
+    "don[\"PREV_DON\"] = np.where(don['DONOR_KEY'] == don['DONOR_KEY'].shift(1), don['don_proc_cat'].shift(1), 10)\n",
+    "\n",
     "#IMPUTE DON_PROC\n",
     "# if immediate next donation procedure is WB/RBC then deferred donation is WB/RBC\n",
     " #if immediate previous donation procedure is WB/RBC then deferred donation is WB/RBC\n",
@@ -169,52 +178,22 @@
     "\n",
     "don['def_prod_imputed'] = np.where((don['don_proc_cat'] == 'Not Drawn/Unknown') & (don.PREV_DON=='WB'), 1, 0)\n",
     "don['def_prod_imputed'] = np.where((don['don_proc_cat'] == 'Not Drawn/Unknown') & (don.NEXT_DON=='WB'), 1, don.def_prod_imputed)\n",
-    "don['def_prod_imputed'] = np.where((don['don_proc_cat'] == 'Not Drawn/Unknown') & ((don.NEXT_DON==10) & (don.PREV_DON==10)), 1, don.def_prod_imputed)\n"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "254cc43e-bbcc-4c9a-96fa-33143af41bfb",
-   "metadata": {},
-   "outputs": [],
-   "source": [
+    "don['def_prod_imputed'] = np.where((don['don_proc_cat'] == 'Not Drawn/Unknown') & ((don.NEXT_DON==10) & (don.PREV_DON==10)), 1, don.def_prod_imputed)\n",
+    "\n",
     "don['don_proc_cat']=np.where(don.def_prod_imputed == 1, 'WB', don.don_proc_cat)\n",
-    "don.don_proc_cat.value_counts()"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "b12bddf7-6c8e-4594-86a7-14d9510f3838",
-   "metadata": {},
-   "outputs": [],
-   "source": [
+    "\n",
     "# backward fill remaining NOT DRAWNs- most proximal next visit\n",
     "\n",
     "don['don_proc_cat']=np.where((don['don_proc_cat'] == 'Not Drawn/Unknown'), np.NaN, don.don_proc_cat)\n",
     "\n",
     "don['don_proc_cat'] = don.groupby('DONOR_KEY')['don_proc_cat'].bfill()\n",
-    "don.don_proc_cat.value_counts()"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "4362eb8e-d13b-4b5c-a03d-1057d22b496d",
-   "metadata": {},
-   "outputs": [],
-   "source": [
+    "don.don_proc_cat.value_counts()\n",
+    "\n",
     "#don=don2#uncomment and run to reset\n",
     "don2=don #duplicate before changing\n",
     "don.drop(don[(don['DONOR_NUMBER'] == 'UNKNOWN')].index, inplace=True)\n",
     "don.drop(don[(don['DONOR_KEY'] == 0.0)].index, inplace=True)\n",
     "don.drop(don[don.DON_DATE_KEY.isna()].index, inplace=True)\n",
-    "\n",
-    "#rbc and Wb only and allogenic\n",
-    "don.drop(don[(don['don_proc_cat'] != 'WB')].index, inplace=True)\n",
-    "don.drop(don[(don['DONATION_TYPE'] != 'Allogeneic')].index, inplace=True)\n",
-    "#remove FINs that are still in the process if migrating\n",
     "\n",
     "don['FIN']=don.DONATION_NUMBER.str.slice(start=0, stop=5)\n",
     "don.drop(don[(don['FIN'] == 'W0358') |\n",
