--- a/2_scripts/00_vitalant_merge_data.ipynb
+++ b/2_scripts/00_vitalant_merge_data.ipynb
@@ -27,7 +27,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "#load all files\n",
+    "#load all files to be used\n",
     "\n",
     "don=pd.read_csv(\"../1_data/private/donation_donor2.csv\")\n",
     "defr=pd.read_csv(\"../1_data/private/deferral.csv\")\n",
@@ -73,7 +73,7 @@
    "outputs": [],
    "source": [
     "#merge donor history\n",
-    "#merge donor_history\n",
+    "\n",
     "don['DonorID']=don['DONOR_KEY']\n",
     "don[\"Visit_Date\"] = pd.to_datetime(don['DON_DATE_KEY'], format='%Y%m%d') #convert to datetime object\n",
     "don['Visit_Date']=pd.to_datetime(don['Visit_Date']).dt.strftime('%Y-%m-%dT%H:%M:%SZ') #covert to ISO -#2019-03-26T00:00:00Z\n",
